# derolas_landing_page

./: .dockeringore  .gitignore  .prettierignore  .release-it.json  Dockerfile  README.md  makefile  nginx.conf  open-api-spec.yaml  package-lock.json  package.json  pyproject.toml  shell.nix  test-server.py
.github/workflows/: common_check.yaml  publish.yaml
backend/: .generate.py.swp  __init__.py  api.py  app.py  generate.py  model.py  models.py
backend/alembic/: env.py
src/: app.d.ts  global.d.ts
src/components/: balancesChart.svelte  counter.svelte  parameterTable.svelte
src/lib/api/: index.ts
src/lib/api/core/: OpenAPI.ts  request.ts
src/lib/api/models/: AssetRoiSeries.ts  ErrorResponse.ts  Exchange.ts  ExchangesResponse.ts  Parameter.ts  ParameterUpdateRequest.ts  PoolMetricsResponse.ts  PoolSummary.ts  PoolsResponse.ts  TimeSeriesPoint.ts  VolumesResponse.ts  VolumesSeriesPoint.ts
src/lib/api/services/: DefaultService.ts
src/lib/components/: DiagramSection.svelte  Footer.svelte  NavBar.svelte  TestimonialCarousel.svelte  WhoSection.svelte  WhyCard.svelte  XLink.svelte
src/lib/components/charts/: CumulativeRoiChart.svelte  SharePriceChart.svelte  SimpleLineChart.svelte
src/lib/components/ui/card/: card.svelte
src/lib/components/ui/chart/: chart-tooltip.svelte
src/lib/data/: homepage.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/contact/: +page.svelte
src/routes/services/: +page.svelte
src/routes/stats/: +page.svelte  +page.ts
src/routes/team/: +page.svelte
tests/: test_backend.py
(+4 files in other folders)
